--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,3 @@
 packages:
-  - package: dbt-labs/dbt_utils
-    version: [">=0.9.0", "<1.0.0"]
+  - git: https://github.com/dbt-labs/dbt-utils
+    revision: 0.9.0
